[package]
name = "nut"
version = "0.1.3"
authors = ["Vyrtsev Mikhail <reeywhaar@gmail.com>"]
homepage = "https://github.com/Reeywhaar/nut"
description = "Bolt DB Port in Rust"
edition = "2018"
license = "MIT"
exclude = ["test_data"]

[[bin]]
name = "nut"

[dependencies]
fnv = "1.0.7"
poolcache = "0.1.1"
memoffset = "0.9.0"
fs2 = "0.4.3"
page_size = "0.6.0"
memmap2 = "0.9.3"
scopeguard = "1.2.0"
bitflags = "2.4.2"
either = "1.9.0"
lock_api = "0.4.11"
parking_lot = "0.12.1"
clap = { version = "4.4.18", features = ["derive"] }
hexdump = "0.1.1"
ansi_term = "0.12.1"

[dev-dependencies]
rand = "0.8.5"
